Добавлены лабы 6-7